# SERAPH-OS

./: CMakeLists.txt  README.md  ROADMAP.md  kernel.ld
boot/: efi.ld  efi_main.c  elf64_loader.c  elf64_loader.h  graphics.c  memory_map.c  uefi_crt.c  uefi_crt.h
docs/: 00-overview.md  01-void-semantics.md  02-vbit-logic.md  03-bit-operations.md  04-semantic-byte.md  05-entropic-arithmetic.md  06-q128-fixedpoint.md  07-galactic-numbers.md  08-capability-tokens.md  09-chronon-time.md  10-spectral-arena.md  11-glyph-sdf.md  12-sovereign-process.md  13-surface-ui.md  14-whisper-ipc.md  15-strand-threads.md  16-atlas-singlestore.md  17-aether-dsm.md  20-seraphim-compiler.md  21-celestial-ir.md  22-native-code-generation.md  23-elf64-writer.md  24-seraphic-driver.md  25-seraph-v.md  glossary.md
include/: seraph.h
include/seraph/: aether.h  aether_nvme.h  aether_security.h  apic.h  arena.h  atlas.h  bits.h  bmi2_intrin.h  boot.h  capability.h  chronon.h  context.h  early_mem.h  galactic.h  galactic_scheduler.h  glyph.h  harmonics.h  integers.h  interrupts.h  kmalloc.h  kruntime.h  math_cache.h  math_tier.h  pmm.h  proof_blob.h  q128.h  q16_trig.h  q64_trig.h  rotation.h  sbf.h  scheduler.h  semantic_byte.h  sovereign.h  strand.h  surface.h  uefi_types.h  vbit.h  vector_clock.h  vmm.h  vmx.h  (+2 more)
include/seraph/crypto/: sha256.h
include/seraph/drivers/: nic.h  nvme.h
include/seraph/seraphim/: arm64_encode.h  ast.h  ast_to_ir.h  celestial_ir.h  celestial_to_arm64.h  celestial_to_riscv.h  celestial_to_x64.h  checker.h  codegen.h  effects.h  elf64_writer.h  lexer.h  parser.h  proofs.h  riscv_encode.h  sbf_loader.h  sbf_writer.h  token.h  types.h  x64_encode.h
src/: aether.c  aether_nic.c  aether_nvme.c  aether_security.c  apic.c  arena.c  atlas.c  atlas_nvme.c  bits.c  capability.c  chronon.c  context_stub.c  context_switch.asm  early_mem.c  foreign_substrate.c  galactic.c  galactic_scheduler.c  glyph.c  harmonics.c  idt.asm  idt.c  idt_stub.c  integers.c  interrupts.c  kmain.c  kmalloc.c  kruntime.c  math_cache.c  pic.c  pmm.c  proof_blob.c  q128.c  q16_trig.c  q64_trig.c  rotation.c  scheduler.c  semantic_byte.c  sovereign.c  strand.c  surface.c  (+6 more)
src/crypto/: sha256.c
src/drivers/net/: e1000.c  e1000.h
src/drivers/nvme/: nvme.c  nvme_cmd.c  nvme_queue.c
src/seraphim/: arm64_encode.c  ast.c  ast_to_ir.c  celestial_ir.c  celestial_to_arm64.c  celestial_to_riscv.c  celestial_to_x64.c  checker.c  codegen.c  effects.c  elf64_writer.c  fpu_check.c  lexer.c  parser.c  pattern_opt.c  proofs.c  riscv_encode.c  sbf_loader.c  sbf_writer.c  seraphic.c  seraphic.srph  token.c  types.c  x64_encode.c
tests/: array_test.srph  array_test_c.c  bitwise_not_test  bitwise_not_test.srph  bitwise_not_test_c.c  bitwise_simple  bitwise_simple.srph  bitwise_simple_c.c  bitwise_test  bitwise_test.srph  bitwise_test_c.c  bitwise_test_x64  break_test.srph  break_test_c.c  call_one  call_one.srph  call_one_c.c  call_small  call_small.srph  call_small_c.c  call_test  call_test.srph  call_test_c.c  call_two  call_two.srph  call_two_c.c  closure_test.srph.skip  closure_test_c.c.skip  continue_test.srph  continue_test_c.c  dce_test.srph  dce_test_c.c  enum_large_test  enum_large_test.srph  enum_large_test_c.c  enum_test.srph  enum_test_c.c  field_add.srph  field_add2.srph  field_add2_c.c  (+159 more)
